spacing issues paragraph line height. needed to run gulp to process sass.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -63,16 +63,20 @@ body {
 	padding: 30px 0;
 	text-align: center;
 	height: 100%;
+	line-height: 1.5em;
 	.container {
 		display: block;
 		margin: 0 auto;
 		width: 90%;
 		max-width: 800px;
+		p {
+			line-height: 1.5em;
+		}
 		.icon{
 		  display: inline-block;
 		  margin: 35px 30px;
 		  img {
-		  	width: 130px;
+		  	width: 80px;
 		  }
 		}
 	.start {
@@ -92,9 +96,7 @@ body {
 		padding-top: 15%; 
 		margin: 0;
 		color: $water;
-	}
-	p {
-		line-height: 1.5em;
+		line-height: 2em;
 	}
 }
 
